Creates WebSocket client in the browser sends user input data to WebSockerServer.

--- a/websocket.html
+++ b/websocket.html
@@ -7,6 +7,12 @@
   <title>Web Socket Implementation</title>
 </head>
 <body>
+
+  <form action="javascript:void(0)">
+    <label for="message">Message</label>
+    <input type="text" id="message"/>
+    <button>Submit</button>
+  </form>
   
   <script src="websocket-client.js"></script>
 </body>
