One client sends messages to another client, and closes its chat session.

--- a/websocket.html
+++ b/websocket.html
@@ -8,11 +8,15 @@
 </head>
 <body>
 
+  <h2></h2>
+
   <form action="javascript:void(0)">
     <label for="message">Message</label>
     <input type="text" id="message"/>
     <button>Submit</button>
   </form>
+
+  <div class="messages"></div>
   
   <script src="websocket-client.js"></script>
 </body>
